gcc/testsuite/gimple.dg/20120604-2.gimple
gimple_cond<modify_expr,a,3,<tlabel>,<flabel>> /* { dg-error "Unsupported gimple_cond expression" } */
